# VisualSLAMTutorial

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build.sh
.archived/: CMakeLists.txt
.archived/standalone/: CMakeLists.txt
.github/: PULL_REQUEST_TEMPLATE.md
all/: CMakeLists.txt
docker/: build_docker_image.sh  run_docker_container.sh  ubuntu2204.Dockerfile
docs/Microsoft Word-like document/: main.aux  main.out  main.tex
experimental/: gauss_newton.py  triangulation.py
libraries/camera_tracking/: CMakeLists.txt
libraries/camera_tracking/include/camera_tracking/: camera_tracking.h
libraries/camera_tracking/source/: camera_tracking.cpp
libraries/datastructure/: CMakeLists.txt
libraries/datastructure/include/datastructure/: frame.h
libraries/datastructure/source/: frame.cpp
libraries/image_loader/: CMakeLists.txt
libraries/image_loader/include/image_loader/: load_from_folder.h
libraries/image_loader/source/: load_from_folder.cpp
libraries/mapper/: README.md  (+1 more)
libraries/visualizer/: CMakeLists.txt  README.md
libraries/visualizer/include/visualizer/: visualizer.h
libraries/visualizer/source/: visualizer.cpp
mac/: README.md
src/camera_plugins/camera_plugins_base/: CMakeLists.txt  package.xml
src/camera_plugins/camera_plugins_base/include/: monocular_camera.hpp
src/camera_plugins/camera_plugins_base/include/camera_plugins_base/: monocular_camera.hpp
src/camera_plugins/monocular_camera_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/camera_plugins/monocular_camera_plugins/include/monocular_camera_plugins/: calicam.hpp  calicam_plugin.hpp  generic_usb_cam_plugin.hpp  monocular_camera.hpp  monocular_camera_impl.hpp  usb_cam.hpp  usb_cam_plugin.hpp  virtual_camera.hpp
src/camera_plugins/monocular_camera_plugins/params/: calicam.yam.example  kitti_camera.yaml  monocular_camera.yaml.example  virtual_camera.yaml.example
src/camera_plugins/monocular_camera_plugins/src/: calicam.cpp  calicam_plugin.cpp  generic_usb_cam_plugin.cpp  monocular_camera.cpp  monocular_camera_impl.cpp  usb_cam.cpp  usb_cam_plugin.cpp  virtual_camera.cpp
src/vslam_components/data_loader_nodes/: CMakeLists.txt  package.xml
src/vslam_components/data_loader_nodes/include/data_loader_nodes/: camera_info.hpp  data_loader_node.hpp  load_from_folder.hpp
src/vslam_components/data_loader_nodes/include/data_loader_nodes/detail/: undistorter.hpp
src/vslam_components/data_loader_nodes/src/: data_loader_node.cpp  load_from_folder.cpp  undistorter.cpp
src/vslam_components/feature_matching_nodes/: CMakeLists.txt  package.xml
src/vslam_components/feature_matching_nodes/include/feature_matching_nodes/: orb_matcher_node.hpp
src/vslam_components/feature_matching_nodes/src/: main.cpp  orb_matcher_node.cpp
src/vslam_components/visualization_nodes/: CMakeLists.txt  package.xml
src/vslam_components/visualization_nodes/include/visualization_nodes/: rviz_visual_node.hpp
src/vslam_components/visualization_nodes/src/: rviz_visual_node.cpp
src/vslam_components/vslam_nodes/: CMakeLists.txt  package.xml
src/vslam_components/vslam_nodes/include/vslam_nodes/: indirect_vslam_node.hpp  plugin_loader.hpp  utils.h  utils.hpp  vslam_node.hpp  vslam_node_base.hpp
src/vslam_components/vslam_nodes/src/: indirect_vslam_node.cpp  utils.cpp  vslam_node.cpp  vslam_node_base.cpp
src/vslam_datastructure/: CMakeLists.txt  package.xml
src/vslam_datastructure/include/vslam_datastructure/: frame.hpp  frame_pair.hpp  frame_queue.hpp  map.hpp  point.hpp  signal_queue.hpp  typedefs.hpp  utils.hpp
src/vslam_datastructure/include/vslam_datastructure/feature/: base.hpp  orb.hpp
src/vslam_datastructure/include/vslam_datastructure/frame/: frame.hpp
src/vslam_datastructure/src/: frame.cpp  frame_queue.cpp  map.cpp  point.cpp  typedefs.cpp  utils.cpp
src/vslam_interfaces/vslam_srvs/: CMakeLists.txt  package.xml
src/vslam_interfaces/vslam_srvs/srv/: AddKeyframeToDb.srv  GetKeyframe.srv  GetState.srv  SetKeyframe.srv  SetState.srv
src/vslam_plugins/backend_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/vslam_plugins/backend_plugins/include/vslam_backend_plugins/: backend.hpp  indirect.hpp  indirect_optimizer.hpp  types.hpp  utils.hpp
src/vslam_plugins/backend_plugins/src/: backend.cpp  indirect.cpp  indirect_optimizer.cpp  utils.cpp
src/vslam_plugins/feature_extraction_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/vslam_plugins/feature_extraction_plugins/include/vslam_feature_extraction_plugins/: feature_extraction_base.hpp  orb.hpp
src/vslam_plugins/feature_extraction_plugins/src/: orb.cpp
src/vslam_plugins/feature_extractor_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/vslam_plugins/feature_extractor_plugins/include/vslam_feature_extractor_plugins/: opencv_feature_extractor.hpp  orb.hpp
src/vslam_plugins/feature_extractor_plugins/src/: opencv_feature_extractor.cpp  orb.cpp
src/vslam_plugins/mapper_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/vslam_plugins/mapper_plugins/include/vslam_mapper_plugins/: opencv_mapper.hpp  opencv_triangulation.hpp
src/vslam_plugins/mapper_plugins/src/: opencv_mapper.cpp  opencv_triangulation.cpp
src/vslam_plugins/place_recognition_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/vslam_plugins/place_recognition_plugins/include/vslam_place_recognition_plugins/: bag_of_words.hpp
src/vslam_plugins/place_recognition_plugins/src/: bag_of_words.cpp
src/vslam_plugins/visualizer_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/vslam_plugins/visualizer_plugins/include/vslam_visualizer_plugins/: rviz.hpp  visualizer.hpp
src/vslam_plugins/visualizer_plugins/src/: rviz.cpp  visualizer.cpp
src/vslam_plugins/vslam_plugins_base/: CMakeLists.txt  package.xml
src/vslam_plugins/vslam_plugins_base/include/vslam_plugins_base/: backend.hpp  base.hpp  camera_tracker.hpp  feature_extractor.hpp  feature_matcher.hpp  mapper.hpp  place_recognition.hpp  visualizer.hpp
src/vslam_plugins/vslam_plugins_base/src/: backend.cpp
standalone/: CMakeLists.txt
(+107 files in other folders)
