<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vslam_datastructure</name>
  <version>0.2.0</version>
  <description>Datastructure and custom types used in visual SLAM nodes</description>
  <maintainer email="yan99033@gmail.com">sy</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>vslam_msgs</depend>
  <depend>vslam_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
