<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monocular_camera_plugins</name>
  <version>0.2.0</version>
  <description>Plugins for monocular cameras to get images from cameras</description>
  <maintainer email="yan99033@gmail.com">sy</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>    
  <depend>camera_plugins_base</depend>
  <depend>vslam_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
