<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_loader_nodes</name>
  <version>0.1.1</version>
  <description>Image frame loader to the visual SLAM pipeline</description>
  <maintainer email="yan99033@gmail.com">sy</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_plugins_base</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>vslam_msgs</depend>
  <depend>vslam_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
