<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vslam_nodes</name>
  <version>1.0.1</version>
  <description>Nodes for processing an image stream to obtain the camera motion and structure of the scene</description>
  <maintainer email="yan99033@gmail.com">sy</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>vslam_plugins_base</depend>
  <depend>visualization_msgs</depend>
  <depend>vslam_msgs</depend>
  <depend>vslam_utils</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
