<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vslam_place_recognition_plugins</name>
  <version>1.0.1</version>
  <description>Place recognition plugins to find a previously visited place by identifying the similarity between the current image and the images in the database</description>
  <maintainer email="yan99033@gmail.com">sy</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>    
  <depend>vslam_plugins_base</depend>
  <depend>thirdparty</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
